fixed index overflow on mobile

--- a/source/_assets/scss/pages/index.scss
+++ b/source/_assets/scss/pages/index.scss
@@ -992,6 +992,7 @@ FootEnd Section
 	width: 100%;
 	min-height: 35rem;
 	padding: 6rem 1rem 0;
+	overflow-x: hidden;
 	
 	// Background Imagery
 	> * {
@@ -1337,8 +1338,8 @@ FootEnd Section
 			font-size: 2.1rem;
 		}
 		div.lighting {
-			width: 200%;
-			margin-left: -50%;
+			transform: scaleX(2);
+			transform-origin: center;
 		}
 	}
 }
